fix: layout issues after merge from upstream

--- a/css/styles.css
+++ b/css/styles.css
@@ -195,14 +195,14 @@ nav h1 a {
 @media (min-width: 750px) {
 	#map-container {
 		width: 70%;
-		min-height: 500px;
+		min-height: 400px;
 	}
 	#map {
 		height: 100%;
 	}
 	.filter-options {
-    height: 500px;
-		width: 30%;
+    height: 400px;
+    width: 30%;
 		order: -1;
 	}
 	.filter-options select {
@@ -458,7 +458,7 @@ nav h1 a {
 	}
 	.inside #map-container {
 		width: 35%;
-		min-height: 500px;
+		min-height: 460px;
 	}
 }
 
